# fun_with_tektronix

./: README.md  boxes.py  lines.py  pyproject.toml  pyptoject.toml  tektronix.py  test.py  words.py
src/: tektronix.py
